[package]
name = "twine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.13.4", features = ["https"]}
url = "2"
regex = "1"
clap = { version = "4.5.36", features = ["derive"] }
anyhow = { version = "1.0", default-features = false }