[package]
name = "twine"
version = "1.0.0"
edition = "2021"
authors = ["kingsfoil"]
description = "Command line tool to fetch gifs directly from getyarn.io"
repository = "https://github.com/alex0112/twine"
license = "GPL-3.0"
keywords = ["gif", "command-line", "yarn", "getyarn", "twine"]
categories = ["command-line-utilities"]




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.13.4", features = ["https"]}
url = "2"
regex = "1"
clap = { version = "4.5.36", features = ["derive"] }
anyhow = { version = "1.0", default-features = false }
